--- a/src/app/airport-details/airport-details.component.html
+++ b/src/app/airport-details/airport-details.component.html
@@ -1,8 +1,16 @@
 <div class="container selectedAirport-details p-8 mx-auto">
-  <a routerLink="/" class="text-blue-500 hover:text-blue-700 font-bold">
+  <a
+    routerLink="/"
+    class="text-blue-500 hover:text-blue-700 font-bold"
+    aria-label="Back to airports list"
+  >
     Back to airports list
   </a>
-  <div class="bg-white p-4 rounded-md shadow-md mt-8" *ngIf="selectedAirport">
+  <div
+    role="region"
+    class="bg-white p-4 rounded-md shadow-md mt-8"
+    *ngIf="selectedAirport"
+  >
     <h3 class="text-lg font-semibold mb-2">{{ selectedAirport.name }}</h3>
     <ul class="space-y-2">
       <li class="flex items-center">
