--- a/src/app/airport-details/airport-details.component.html
+++ b/src/app/airport-details/airport-details.component.html
@@ -6,34 +6,37 @@
   >
     Back to airports list
   </a>
-  <div
-    role="region"
-    class="bg-white p-4 rounded-md shadow-md mt-8"
-    *ngIf="selectedAirport"
-  >
-    <h3 class="text-lg font-semibold mb-2">{{ selectedAirport.name }}</h3>
-    <ul class="space-y-2">
-      <li class="flex items-center">
-        <span class="w-32 font-semibold">Country Code:</span>
-        <span>{{ selectedAirport.country_code }}</span>
-      </li>
-      <li class="flex items-center">
-        <span class="w-32 font-semibold">IATA Code:</span>
-        <span>{{ selectedAirport.iata_code }}</span>
-      </li>
-      <li class="flex items-center">
-        <span class="w-32 font-semibold">ICAO Code:</span>
-        <span>{{ selectedAirport.icao_code }}</span>
-      </li>
-      <li class="flex items-center">
-        <span class="w-32 font-semibold">Latitude:</span>
-        <span>{{ selectedAirport.lat }}</span>
-      </li>
-      <li class="flex items-center">
-        <span class="w-32 font-semibold">Longitude:</span>
-        <span>{{ selectedAirport.lng }}</span>
-      </li>
-    </ul>
-  </div>
+  <app-loading #loadingTemplate *ngIf="loading; else airportData"></app-loading>
+  <ng-template #airportData>
+    <div
+      role="region"
+      class="bg-white p-4 rounded-md shadow-md mt-8"
+      *ngIf="selectedAirport"
+    >
+      <h3 class="text-lg font-semibold mb-2">{{ selectedAirport.name }}</h3>
+      <ul class="space-y-2">
+        <li class="flex items-center">
+          <span class="w-32 font-semibold">Country Code:</span>
+          <span>{{ selectedAirport.country_code }}</span>
+        </li>
+        <li class="flex items-center">
+          <span class="w-32 font-semibold">IATA Code:</span>
+          <span>{{ selectedAirport.iata_code }}</span>
+        </li>
+        <li class="flex items-center">
+          <span class="w-32 font-semibold">ICAO Code:</span>
+          <span>{{ selectedAirport.icao_code }}</span>
+        </li>
+        <li class="flex items-center">
+          <span class="w-32 font-semibold">Latitude:</span>
+          <span>{{ selectedAirport.lat }}</span>
+        </li>
+        <li class="flex items-center">
+          <span class="w-32 font-semibold">Longitude:</span>
+          <span>{{ selectedAirport.lng }}</span>
+        </li>
+      </ul>
+    </div>
+  </ng-template>
   <app-schedule></app-schedule>
 </div>
