--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -30,15 +30,8 @@
   </table>
 </div>
 
-<!-- Loader template -->
 <ng-template #loadingTemplate>
-  <div *ngIf="loading" class="pt-8" aria-label="Loading flights">
-    <div class="bg-gray-200 p-4 rounded-md shadow-md">
-      <p class="text-lg font-semibold text-center text-gray-600">
-        Loading flights...
-      </p>
-    </div>
-  </div>
+  <app-loading #loadingTemplate *ngIf="loading"></app-loading>
 </ng-template>
 
 <div
